// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxComponent Basic checkbox should create with value 2 1`] = `
<gro-checkbox
  value="2"
>
  <input
    type="checkbox"
    value="2"
  />
  <span
    class="gro-checkbox-label"
  >
    Basic 
  </span>
</gro-checkbox>
`;

exports[`CheckboxComponent Basic checkbox should create with value val1 1`] = `
<gro-checkbox
  value="val1"
>
  <input
    type="checkbox"
    value="val1"
  />
  <span
    class="gro-checkbox-label"
  >
    Basic 
  </span>
</gro-checkbox>
`;

exports[`CheckboxComponent Basic checkbox should emit null on uncheck 1`] = `
<gro-checkbox
  value="val"
>
  <input
    type="checkbox"
    value="val"
  />
  <span
    class="gro-checkbox-label"
  >
    Basic 
  </span>
</gro-checkbox>
`;

exports[`CheckboxComponent Basic checkbox should emit value on check 1`] = `
<gro-checkbox
  checked="true"
  class="gro-checked"
  value="val"
>
  <input
    type="checkbox"
    value="val"
  />
  <span
    class="gro-checkbox-label"
  >
    Basic 
  </span>
</gro-checkbox>
`;

exports[`CheckboxComponent Disabled checkbox check does not emit value 1`] = `
<gro-checkbox
  class="gro-disabled"
  disabled="true"
  value="val"
>
  <input
    disabled=""
    type="checkbox"
    value="val"
  />
  <span
    class="gro-checkbox-label"
  >
    Disabled
  </span>
</gro-checkbox>
`;

exports[`CheckboxComponent ReactiveForm checkbox check is touched on change 1`] = `
<gro-checkbox
  class="ng-valid ng-touched ng-dirty"
  value="val"
>
  <input
    type="checkbox"
    value="val"
  />
  <span
    class="gro-checkbox-label"
  >
    Reactive 
  </span>
</gro-checkbox>
`;

exports[`CheckboxComponent ReactiveForm checkbox should create checked 1`] = `
<gro-checkbox
  checked="true"
  class="gro-checked ng-untouched ng-pristine ng-valid"
  value="val"
>
  <input
    type="checkbox"
    value="val"
  />
  <span
    class="gro-checkbox-label"
  >
    Reactive 
  </span>
</gro-checkbox>
`;

exports[`CheckboxComponent ReactiveForm checkbox should create disabled 1`] = `
<gro-checkbox
  checked="true"
  class="gro-checked ng-untouched ng-pristine gro-disabled"
  disabled="true"
  value="val"
>
  <input
    disabled=""
    type="checkbox"
    value="val"
  />
  <span
    class="gro-checkbox-label"
  >
    Reactive 
  </span>
</gro-checkbox>
`;

exports[`CheckboxComponent ReactiveForm checkbox should create unchecked 1`] = `
<gro-checkbox
  class="ng-untouched ng-pristine ng-valid"
  value="val"
>
  <input
    type="checkbox"
    value="val"
  />
  <span
    class="gro-checkbox-label"
  >
    Reactive 
  </span>
</gro-checkbox>
`;

exports[`CheckboxComponent Readonly checkbox check does not emit value 1`] = `
<gro-checkbox
  class="gro-readonly"
  readonly="true"
  value="val"
>
  <input
    readonly=""
    type="checkbox"
    value="val"
  />
  <span
    class="gro-checkbox-label"
  >
    ReadOnly
  </span>
</gro-checkbox>
`;
